--- a/views/nav.slim
+++ b/views/nav.slim
@@ -3,6 +3,6 @@ nav
     li 
       a href=="/"  title="Home" class==current? Home
     li
-      a href=="https://github.com/crguezl/prdcalc"  title="Repo" Repo
+      a href=="https://github.com/Romanillo/Analizador_Lexico_Predictivo_Recursivo"  title="Repositorio Github" Repositorio Github
     li 
-      a href==""  title="Tests" Tests
+      a href==""  title="Pruebas" Pruebas
