--- a/views/nav.slim
+++ b/views/nav.slim
@@ -5,4 +5,4 @@ nav
     li
       a href=="https://github.com/Romanillo/Analizador_Lexico_Predictivo_Recursivo"  title="Repositorio Github" Repositorio Github
     li 
-      a href==""  title="Pruebas" Pruebas
+      a href=="/tests"  title="Pruebas" Pruebas
