--- a/views/nav.slim
+++ b/views/nav.slim
@@ -2,7 +2,9 @@ nav
   ul
     li 
       a href=="/"  title="Home" class==current? Home
-    li
-      a href=="https://github.com/Romanillo/Analizador_Lexico_Predictivo_Recursivo"  title="Repositorio Github" Repositorio Github
+    li     
+      a href=="/grammar"  title="Grammar" class==current?("/grammar") Gramatica
+	li
+      a href=="https://github.com/Romanillo/Analizador_Lexico_Predictivo_Recursivo"  title="Github" Github
     li 
       a href=="/tests"  title="Pruebas" Pruebas
