--- a/views/home.slim
+++ b/views/home.slim
@@ -1,8 +1,7 @@
-p This website contains a simple example of a predictive parser
-/img src="/images/st.gif" alt="Syntax Tree"
+p Ejemplo de un analizador predictivo recursivo
 #header.header
   p
-    | Load example to parse
+    | Cargue algún código de ejemplo a parsear:
   div
     textarea#original[autofocus cols="80" rows="5"]
   br
