--- a/views/nav.slim
+++ b/views/nav.slim
@@ -7,4 +7,4 @@ nav
 	li
       a href=="https://github.com/Romanillo/Analizador_Lexico_Predictivo_Recursivo"  title="Github" Github
     li 
-      a href=="/tests"  title="Pruebas" Pruebas
+      a href=="..\public\tests"  title="Pruebas" Pruebas
